# comptable-project

./: .env.example  .gitignore  Dockerfile  Dockerfile.llama  Dockerfile.prod  LOGGING_GUIDE.md  Mau_xuat_du_lieu.xlsx  TEST_EMAIL_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  llama-entrypoint.sh  ollama-entrypoint.sh  pyproject.toml  start.bat  start.sh  test_gmail_connection.py
.github/workflows/: ci.yml  docker-publish.yml  pipeline.yml
app/: main.py
app/application/services/: bg_finalize.py
app/application/use_cases/: export_excel.py  get_exports.py  process_invoice.py  review_and_confirm.py
app/core/: config.py  database.py  dependencies.py  logging_config.py
data/: invoices.db
docs/: CI_CD_DOCKER_GUIDE.md  huong-dan-excel-cr.md  huong-dan-he-thong.md  huong-dan-link-invoice-downloader.md
scratch/: check_templates.py  fix_tests.py  fix_tests2.py  fix_tests3.py  pytest_output.txt
tests/: test_excel_cr_aggregate.py  test_excel_cr_classifier.py  test_excel_cr_db.py  test_excel_cr_parser.py  test_excel_cr_rules.py  test_excel_cr_writer.py
tests/application/: test_export_excel.py  test_process_invoice.py  test_process_invoice_line_items.py  test_review_and_confirm.py  test_review_confirm_line_items.py
tests/domain/: test_entities.py  test_invoice_line_item.py  test_notification_port.py  test_value_objects.py
tests/infrastructure/: test_console_notifier.py  test_excel_detail_writer.py  test_excel_writer.py  test_invoice_link_downloader.py  test_link_extractor.py  test_ollama_client.py  test_pdf_parser.py  test_sqlite_repo.py  test_sqlite_repo_line_items.py  test_telegram_notifier.py  test_xml_line_items.py  test_xml_parser.py  test_zip_extractor.py
tests/presentation/: test_web_router.py
tests/samples/: invoice_test.xml
(+72 files in other folders)
