[project]
name = "collect-invoice"
version = "0.1.0"
description = ""
authors = [
    {name = "Quang dung Truong",email = "truongquangdung0609@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.42.91,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "markitdown[pdf] (>=0.1.5,<0.2.0)",
    "pdfminer-six (>=20231228)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.45.0,<0.46.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "imapclient (>=3.0.1,<4.0.0)",
    "pdfplumber (>=0.11,<0.12)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
prod = [
    "gunicorn (>=23.0.0,<24.0.0)"
]
